Minor css changes to ensure TOC view ticks are inline when responsive text is off & try to improve footer bar progress bar spacing

--- a/modules/xerte/parent_templates/Nottingham/common_html5/css/mainStyles.css
+++ b/modules/xerte/parent_templates/Nottingham/common_html5/css/mainStyles.css
@@ -720,7 +720,7 @@ button.ui-button-icon-only .ui-icon[class*=" fa-"] {
 	width: 100%;
 	height: 6px;
 	margin: auto;
-	margin-top: 15px;
+	margin-top: .5em;
 	background-color: #fff;
 }
 #x_headerProgress .pbContainer {
@@ -763,7 +763,7 @@ button.ui-button-icon-only .ui-icon[class*=" fa-"] {
 
 /* the text next to the progress bar */
 .pbTxt {
-	font-size: 10px;
+	font-size: max(.8em, 10px);
 	text-align: center;
 	padding-top: .5em;
 }
@@ -1609,6 +1609,10 @@ a:focus .wcagLogo {
 	margin-bottom: 5px;
 	text-align: left;
 	box-sizing: border-box;
+}
+
+#menuItems .chapterItem a {
+	padding-right: 1em;
 }
 
 #menuItems .chapterPageHolder .menuItem:last-of-type {
